Verif/Test/Invalide/test_erreur_1.4-6.deca
// Description:
//    Programme soulevant l'erreur (1.4)
// Resultats:
//    Erreur contextuelle
//    Ligne 15 : Identificateur 'A' déjà déclaré (règle 1.4)
//
// Attributs: exec correct automatique
//
// Historique:
//    cree le 19/01/2012

class A {
}

class A {
}


{
}